--- a/camp-equipment-loan-system/camp-equipment-loan-system.vcxproj
+++ b/camp-equipment-loan-system/camp-equipment-loan-system.vcxproj
@@ -23,11 +23,13 @@
     <ClCompile Include="FileHandler.cpp" />
     <ClCompile Include="LoginSystem.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="System.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Equipment.h" />
     <ClInclude Include="FileHandler.h" />
+    <ClInclude Include="System.h" />
     <ClInclude Include="LoginSystem.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
