--- a/camp-equipment-loan-system/camp-equipment-loan-system.vcxproj
+++ b/camp-equipment-loan-system/camp-equipment-loan-system.vcxproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="FileHandler.cpp" />
-    <ClCompile Include="LoginSystem.cpp" />
+    <ClCompile Include="LoginSection.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="System.cpp" />
     <ClCompile Include="User.cpp" />
@@ -30,7 +30,7 @@
     <ClInclude Include="Equipment.h" />
     <ClInclude Include="FileHandler.h" />
     <ClInclude Include="System.h" />
-    <ClInclude Include="LoginSystem.h" />
+    <ClInclude Include="LoginSection.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
